deploy/base/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  ports:
    - name: http
      port: 4000
      targetPort: 4000
  type: ClusterIP
